--- a/laravel/docker-compose.yml
+++ b/laravel/docker-compose.yml
@@ -3,24 +3,25 @@ version: '3.3'
 services:
    db:
     container_name: db
-    image: mariadb
+    image: centos/mariadb-101-centos7
     volumes:
-      - ./db_data:/var/lib/mysql
+      - ./db_data:/var/lib/mysql/data    
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: laravel
-      MYSQL_DATABASE: laravel
-      MYSQL_USER: laravel
-      MYSQL_PASSWORD: laravel
+      MYSQL_ROOT_PASSWORD: secret
+      MYSQL_DATABASE: homestead
+      MYSQL_USER: homestead
+      MYSQL_PASSWORD: secret
+
 
    laravel:
-    image: laravel
+    image: laravel_dev
     container_name: laravel
     ports:
       - "8080:80"
     volumes:
-       - ./www:/var/www/html
-       - ./apache/conf:/etc/httpd/conf
-       - ./apache/conf.d:/etc/httpd/conf.d
+       - ./apache:/home/apache
+    links:
+      - db:database
 
     restart: always
